# linphone-web-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  Factory.cpp  GETTING_STARTED.md  LICENSE.md  LinphoneCallAPI.cpp  LinphoneCallAPI.h  PluginConfig.cmake  README.md  SimpleStreamHelper.cpp  SimpleStreamHelper.h  addressapi.cpp  addressapi.h  authinfoapi.cpp  authinfoapi.h  base64.cpp  base64.h  callapi.cpp  callapi.h  calllogapi.cpp  calllogapi.h  callparamsapi.cpp  callparamsapi.h  callstatsapi.cpp  callstatsapi.h  coreapi.cpp  coreapi.h  coreplugin.cpp  coreplugin.h  factory.cpp  factoryapi.cpp  factoryapi.h  filemanagerapi.cpp  filemanagerapi.h  linphone.cpp  linphone.h  linphoneAPI.cpp  linphoneAPI.h  linphoneCallAPI.cpp  (+21 more)
Common/: clean_js.py  common.cmake  concat_files.py  copy.py  crxmake.py  importlib.py  mac_rpath.py  regex.py  sdk.cmake  signtool.py  xpisign.py
Common/xpisign/: api.py  crypto.py
Doc/: APIWeb.ods  plugin_specifics.js  script.sh
Doc/tutorials/: README  call.html  chat.html  file_transfer.html  login.html  plugin.html  presence.html  utils.js  video.html
Ext/: FSOperations.h  SimpleStreamHelper.cpp  SimpleStreamHelper.h  extended_variant.h
Html/: index.html  templates.html
Html/css/: linphone.css
Html/js/: i18n.js  jquery.scrollabletab.js  linphone.i18n.js  linphone.js
Mac/: projectDef.cmake  videowindowmac.cpp  videowindowmac.h  videowindowmac.mm
Mac/CRX/: manifest.json
Mac/PKG.pmdoc/: 01linphone-contents.xml  01linphone.xml  index.xml  move.sh
Mac/PKG.pmdoc/scripts/: remove-old-install.sh
Mac/PKG/install.pmdoc/: index.xml
Mac/XPI/: install.rdf
Mac/bundle_template/: Info.plist  Localized.r
Src/: addressapi.cpp  addressapi.h  authinfoapi.cpp  authinfoapi.h  base64.cpp  base64.h  callapi.cpp  callapi.h  calllogapi.cpp  calllogapi.h  callparamsapi.cpp  callparamsapi.h  chatmessageapi.cpp  chatmessageapi.h  chatroomapi.cpp  chatroomapi.h  contentapi.cpp  contentapi.h  coreapi.cpp  coreapi.h  coreplugin.cpp  coreplugin.h  errorinfoapi.cpp  errorinfoapi.h  factory.cpp  factoryapi.cpp  factoryapi.h  filemanagerapi.cpp  filemanagerapi.h  friendapi.cpp  friendapi.h  lpconfigapi.cpp  lpconfigapi.h  macro.h  msvideosizeapi.cpp  msvideosizeapi.h  payloadtypeapi.cpp  payloadtypeapi.h  presenceapi.cpp  presenceapi.h  (+16 more)
Tools/: convert.sh  crx2zip.py  download.sh
Transfers/: downloadfiletransferapi.cpp  downloadfiletransferapi.h  filestreamhelper.h  filetransferapi.cpp  filetransferapi.h  localfiletransferapi.cpp  localfiletransferapi.h  uploadfiletransferapi.cpp  uploadfiletransferapi.h
Win/: projectDef.cmake  videowindowwin.cpp  videowindowwin.h
Win/CRX/: manifest.json
Win/WiX/: linphone-web.ddf  linphone-web.inf  linphoneInstaller.wxs
Win/XPI/: chrome.manifest  install.rdf
X11/: projectDef.cmake  videowindowx11.cpp  videowindowx11.h
X11/CRX/: manifest.json
X11/XPI/: bootstrap.js  chrome.manifest  install.rdf
submodules/: CMakeLists.txt
submodules/cmake/libxml2/: CMakeLists.txt
