cmake_minimum_required(VERSION 2.6)
set(CMAKE_BACKWARDS_COMPATIBILITY 2.6)

Project(LINPHONEWEB_DEPS)

macro(add_install_target VAR_NAME VAR_COMPONENT VAR_DEPENDS_STRING)
	add_custom_target(${VAR_NAME}
		COMMAND ${CMAKE_COMMAND} -DCOMPONENT=${VAR_COMPONENT} -DBUILD_TYPE=${CMAKE_BUILD_TYPE} -P ${CMAKE_BINARY_DIR}/cmake_install.cmake
		COMMENT "Install ${VAR_COMPONENT} component"
		VERBATIM)

	if("${VAR_DEPENDS_STRING}" MATCHES "^.+$")
		string(REPLACE " " ";" VAR_DEPENDS_LIST ${VAR_DEPENDS_STRING})
		foreach(VAR_DEPEND ${VAR_DEPENDS_LIST})
			add_dependencies(${VAR_NAME} ${VAR_DEPEND})
		endforeach()
	endif()
endmacro()

set(CMAKE_EXE_LINKER_FLAGS_DEBUG "${CMAKE_EXE_LINKER_FLAGS_DEBUG} /SAFESEH:NO")
set(CMAKE_EXE_LINKER_FLAGS_MINSIZEREL "${CMAKE_EXE_LINKER_FLAGS_MINSIZEREL} /SAFESEH:NO")
set(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} /SAFESEH:NO")
set(CMAKE_EXE_LINKER_FLAGS_RELWITHDEBINFO "${CMAKE_EXE_LINKER_FLAGS_RELWITHDEBINFO} /SAFESEH:NO")
set(CMAKE_SHARED_LINKER_FLAGS_DEBUG "${CMAKE_SHARED_LINKER_FLAGS_DEBUG} /SAFESEH:NO")
set(CMAKE_SHARED_LINKER_FLAGS_MINSIZEREL "${CMAKE_SHARED_LINKER_FLAGS_MINSIZEREL} /SAFESEH:NO")
set(CMAKE_SHARED_LINKER_FLAGS_RELEASE "${CMAKE_SHARED_LINKER_FLAGS_RELEASE} /SAFESEH:NO")
set(CMAKE_SHARED_LINKER_FLAGS_RELWITHDEBINFO "${CMAKE_SHARED_LINKER_FLAGS_RELWITHDEBINFO} /SAFESEH:NO")
set(CMAKE_MODULE_LINKER_FLAGS_DEBUG "${CMAKE_MODULE_LINKER_FLAGS_DEBUG} /SAFESEH:NO")
set(CMAKE_MODULE_LINKER_FLAGS_MINSIZEREL "${CMAKE_MODULE_LINKER_FLAGS_MINSIZEREL} /SAFESEH:NO")
set(CMAKE_MODULE_LINKER_FLAGS_RELEASE "${CMAKE_MODULE_LINKER_FLAGS_RELEASE} /SAFESEH:NO")
set(CMAKE_MODULE_LINKER_FLAGS_RELWITHDEBINFO "${CMAKE_MODULE_LINKER_FLAGS_RELWITHDEBINFO} /SAFESEH:NO")

set(INSTALL_COMPONENT_IN_POSTBUILD ON)
set(USE_INSTALLED_COMPONENTS ON)
set(LIB_INSTALL_DIR bin)

set(MS2_ENABLE_GSM OFF CACHE BOOL "Build mediastreamer2 with the GSM codec.")

add_subdirectory(cmake/libxml2)
add_subdirectory(antlr3/runtime/C)
add_subdirectory(polarssl)
add_subdirectory(belle-sip)
add_subdirectory(linphone/oRTP)
add_subdirectory(speex)
add_subdirectory(linphone/mediastreamer2)
add_subdirectory(linphone)
